completed task4: desktop updates

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,14 @@
 // Mixins in here
+
+.btnmix(@bg-color; @ft-color; @ft-size) {
+    background-color: @bg-color;
+    color: @ft-color;
+    font-size: @ft-size;
+    border-radius: 10px;
+    height: 4rem;
+    line-height: 4rem;
+    width: 100%;
+    text-align: center;
+}
+
+// .btn(@button-bg; @white; 2rem);
