--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
 // Navigation Styles here
+
+header {
+    border-bottom: 2px dashed @navigation-border;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 8rem;
+}
+
+nav {
+    width: 40%;
+    display: flex;
+}
+
+nav a {
+    text-decoration: none;
+    width: 25%;
+    font-size: 1.5rem;
+    color: black;
+}
