--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,25 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+header {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 8rem;
+}
+nav {
+  width: 40%;
+  display: flex;
+}
+nav a {
+  text-decoration: none;
+  width: 25%;
+  font-size: 1.5rem;
+  color: black;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,6 +197,9 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .top-content img {
+  margin-bottom: 30px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -224,4 +246,14 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  font-size: 2rem;
+  border-radius: 10px;
+  height: 4rem;
+  line-height: 4rem;
+  width: 100%;
+  text-align: center;
 }
