--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,7 @@
 .home {
-
+  .top-content img {
+    margin-bottom: 30px;
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -56,6 +58,12 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      // display: flex;
+      // flex-wrap: wrap;
+      
+      .btn{
+        .btnmix(@button-bg; @white; 2rem);
+      }
     }
   }
 }// home
