completed assignment exc. stretch

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,11 +8,13 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     .img-content {
@@ -22,6 +24,10 @@
       img {
         border-radius: 10px;
       }
+
+        @media @mobile {
+          width: 100%;
+        }
     }
   }
 
@@ -38,6 +44,11 @@
       padding-right: 1%;
       padding-left: 0;
     }
+
+    @media @mobile {
+      display: flex;
+      flex-direction: column-reverse;
+    }
   }
 
   .content-destination {
@@ -47,6 +58,10 @@
     img {
       border-radius: 10px;
     }
+
+      @media @mobile {
+        width: 100%;
+      }
   }
 
   .content-pick {
@@ -58,12 +73,19 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
-      // display: flex;
-      // flex-wrap: wrap;
       
       .btn{
         .btnmix(@button-bg; @white; 2rem);
       }
+
+      @media @mobile {
+        width: 80%;
+      }
+    }
+
+    @media @mobile {
+      flex-wrap: wrap;
+      justify-content: center;
     }
   }
 }// home
