--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    padding: 0px 20px;
+  }
+}
 header {
   border-bottom: 2px dashed #C0C0C0;
 }
@@ -177,15 +182,36 @@ header {
   align-items: center;
   height: 8rem;
 }
+@media (max-width: 500px) {
+  .header-content {
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 nav {
   width: 40%;
   display: flex;
+}
+@media (max-width: 500px) {
+  nav {
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 15px;
+  }
 }
 nav a {
   text-decoration: none;
   width: 25%;
   font-size: 1.5rem;
   color: black;
+}
+@media (max-width: 500px) {
+  nav a {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
 .footer {
   width: 100%;
@@ -211,12 +237,22 @@ nav a {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -230,12 +266,23 @@ nav a {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
 }
 .home .content-destination img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-pick {
   padding-top: 30px;
@@ -256,4 +303,15 @@ nav a {
   line-height: 4rem;
   width: 100%;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
