--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,11 +9,23 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 8rem;
+
+    @media @mobile {
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 nav {
     width: 40%;
     display: flex;
+
+    @media @mobile {
+        justify-content: space-around;
+        width: 100%;
+        margin-top: 15px;
+    }
 }
 
 nav a {
@@ -21,4 +33,10 @@ nav a {
     width: 25%;
     font-size: 1.5rem;
     color: black;
+
+    @media @mobile {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
 }
